--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "express-session": "^1.18.2",
     "googleapis": "^166.0.0",
     "jsonwebtoken": "^9.0.2",
+    "livekit-server-sdk": "^2.14.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "slugify": "^1.6.6"
   }
 }
