--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "livekit-server-sdk": "^2.14.2",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
